SUBDIRS = . pure

javadir = ${prefix}/classes/aterm

JAVAROOT = ${top_builddir}

CLASSPATH_ENV = CLASSPATH=${JAVAROOT}:${EXTERNAL_JARS}

java_JAVA = \
	AFun.java \
	ATerm.java \
	ATermAppl.java \
	ATermBlob.java \
	ATermFactory.java \
	ATermInt.java \
	ATermList.java \
	ATermPlaceholder.java \
	ATermReal.java \
	Fwd.java \
	Visitable.java \
	Identifiable.java \
	Visitor.java \
	ParseError.java
